# LibAsist

./: .gitattributes  .gitignore  Makefile  Readme.md  libasist.hxx  makefile  readme.md
doc/: README.md
env/: CMakeLists.txt  Makefile  clang-format.yaml
env/dCMake.dir/dHelp.dir/: fPack.cmake
src/: array.hxx  btable.hxx  cli.hxx  darray.hxx  data.hxx  enum.hxx  exec.hxx  guis.hxx  head.hxx  htable.hxx  ioput.hxx  ipop.hxx  l1list.hxx  l2list.hxx  libasist.cxx  libasist.hxx  list1.hxx  list2.hxx  logic.hxx  main.cxx  main.hxx  memo.hxx  meta.cxx  meta.hxx  num.hxx  number.hxx  nums.hxx  prefix.hxx  std.hxx  stdlib.hxx  str.hxx  string.hxx  suffix.hxx  table.hxx  term.cxx  term.hxx  time.hxx  util.hxx  val.hxx  vec.hxx  (+3 more)
src/dLibAsist.dir/: fBool.hxx  fDbug.hxx  fExec.hxx  fHead.hxx  fIpop.hxx  fMain.cxx  fMain.hxx  fMemo.hxx  fMeta.hxx  fNums.hxx  fOsys.hxx  fText.hxx  fTime.hxx  fTool.hxx
src/dLibAsist.dir/dHead.dir/: fBool.hxx  fDbug.hxx  fExec.hxx  fIpop.hxx  fMeta.hxx  fNums.hxx  fOsys.hxx  fText.hxx  fTime.hxx  fTool.hxx
src/data/: btable.hxx  darray.hxx  htable.hxx  l1list.hxx  l2list.hxx  sarray.hxx
src/exec/: engine.hxx  signal.hxx  system.hxx
src/head/: bool.hxx  conf.hxx  dbug.hxx  defn.hxx  exec.hxx  ipop.hxx  memo.hxx  meta.hxx  nums.hxx  osys.hxx  stdl.hxx  text.hxx  time.hxx  tool.hxx  type.hxx
src/memo/: arena.cxx  arena.hxx  dummy.cxx  dummy.hxx  giver.hxx  heapy.cxx  heapy.hxx  mlink.cxx  mlink.hxx  newdeldef.cxx  owner.hxx  pager.cxx  pager.hxx  refer.hxx  stack.cxx  stack.hxx  taker.hxx
src/meta/: single.hxx  vnum.cxx  vnum.hxx
src/term/: args.cxx  args.hxx  envi.cxx  envi.hxx  help.cxx  help.hxx  main.cxx  main.hxx  opts.cxx  opts.hxx
src/util/: btable.hxx  darray.hxx  engine.hxx  htable.hxx  l1list.hxx  l2list.hxx  sarray.hxx  signal.hxx  single.hxx  system.hxx
